[project]
name = "studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "python-jose>=3.4.0",
    "tencentcloud-sdk-python-common>=3.0.1335",
    "tencentcloud-sdk-python-sms>=3.0.1335",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
