[project]
name = "studio"
version = "0.1.0"
description = "Nebula studio project backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "passlib>=1.7.4",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.5",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "tencentcloud-sdk-python-common>=3.0.1335",
    "tencentcloud-sdk-python-sms>=3.0.1335",
]

[dependency-groups]
dev = []
